--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,7 @@ jobs:
     strategy:
       matrix:
         eplus-version: ["23.1", "24.1"]
+        package-type: ["eppy", "archetypal"]
     steps:
       - name: Check out
         uses: actions/checkout@v4
@@ -100,10 +101,11 @@ jobs:
           uv run python src/mypy_eppy_builder/generate_package.py \
             --version ${{ matrix.eplus-version }} \
             --idd-file ~/.cache/energyplus/${{ matrix.eplus-version }}/Energy+.idd \
-            --package-type eppy
+            --package-type {{ matrix.package-type }}
 
-      - name: Upload package artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: package-${{ matrix.eplus-version }}
-          path: generated_package
+      - name: Build package
+        working-directory: generated_package
+        run: uv build
+
+      - name: Publish package to PyPI
+        run: uv publish
