--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,12 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
+[tool.pyright]
+include = ["src"]
+reportMissingImports = "error"
+reportMissingTypeStubs = false
+pythonVersion = "3.12"
+
 [tool.ruff]
 target-version = "py39"
 line-length = 120
