ci: ensure unique package version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,6 +115,29 @@ jobs:
             --idd-file /usr/local/EnergyPlus-${{ matrix.energyplus-install }}/Energy+.idd \
             --package-type ${{ matrix.package-type }}
 
+      - name: Set package version from PyPI
+        working-directory: generated_package/types-${{ matrix.package-type }}
+        run: |
+          PKG_NAME=$(python - <<'PY'
+          import tomllib
+          print(tomllib.load(open('pyproject.toml', 'rb'))['project']['name'])
+          PY
+          )
+          NEXT_VERSION=$(python - <<'PY'
+          import json, urllib.request, sys
+          pkg = sys.argv[1]
+          try:
+              with urllib.request.urlopen(f"https://pypi.org/pypi/{pkg}/json") as resp:
+                  ver = json.load(resp)["info"]["version"]
+                  parts = ver.split(".")
+                  next_version = f"{parts[0]}.{parts[1]}.{int(parts[2]) + 1}"
+          except Exception:
+              next_version = "0.1.0"
+          print(next_version)
+          PY
+          "$PKG_NAME")
+          uv version "$NEXT_VERSION"
+
       - name: Build package
         working-directory: generated_package/types-${{ matrix.package-type }}
         run: uv build
