ci: fix package version bump script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,11 +90,11 @@ jobs:
         uses: ./.github/actions/setup-python-env
 
       - name: Bump package version
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && matrix.package-type == 'eppy'
         run: uv version --bump
 
       - name: Commit version bump
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && matrix.package-type == 'eppy'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -123,7 +123,7 @@ jobs:
           print(tomllib.load(open('pyproject.toml', 'rb'))['project']['name'])
           PY
           )
-          NEXT_VERSION=$(python - <<'PY'
+          NEXT_VERSION=$(python - "$PKG_NAME" <<'PY'
           import json, urllib.request, sys
           pkg = sys.argv[1]
           try:
@@ -135,7 +135,7 @@ jobs:
               next_version = "0.1.0"
           print(next_version)
           PY
-          "$PKG_NAME")
+          )
           uv version "$NEXT_VERSION"
 
       - name: Build package
