Refactor EppyStubGenerator to support custom IDF class and improve documentation
- Updated EppyStubGenerator to accept an optional custom IDF class for testing.
- Lazy import of the default IDF class to allow for easier stubbing in tests.
- Added sanitization for docstrings in rendered class stubs.
- Removed unused code and legacy functions related to overload generation.
- Added new tests for CLI functionality and type checking of generated stubs.
- Deleted obsolete foo.py and its corresponding test.
- Updated template rendering tests to focus on class stubs.
- Added mypy as a development dependency in the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "jinja2>=3.1.6",
 ]
 
+[project.scripts]
+# New consolidated CLI for simplified two-package build process
+eplus-stubs-build = "mypy_eppy_builder.cli:main"
+
 [project.urls]
 Homepage = "https://samuelduchesne.github.io/mypy-eppy-builder/"
 Repository = "https://github.com/samuelduchesne/mypy-eppy-builder"
@@ -39,6 +43,7 @@ dev = [
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
     "pyright>=1.1.403",
+    "mypy>=1.10.0",
 ]
 
 [build-system]
