--- a/.github/workflows/build-and-validate.yml
+++ b/.github/workflows/build-and-validate.yml
@@ -13,12 +13,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        eplus-version: ["23.1", "24.1"]
+        eplus: ["23.1", "24.1"]  # Major.Minor authoritative list
         include:
-          - energyplus-version: 23.1.0
+          - eplus: "23.1"
+            energyplus-version: 23.1.0
             energyplus-sha: 87ed9199d4
             energyplus-install: 23-1-0
-          - energyplus-version: 24.1.0
+          - eplus: "24.1"
+            energyplus-version: 24.1.0
             energyplus-sha: 9d7789a3ac
             energyplus-install: 24-1-0
     steps:
@@ -47,7 +49,7 @@ jobs:
       - name: Build both stub packages (internal CLI)
         run: |
           # Generate both archetypal-stubs and eppy-stubs via unified CLI for MAJ.MIN version
-          MAJ_MIN='${{ matrix.eplus-version }}'
+          MAJ_MIN='${{ matrix.eplus }}'
           PATCH=0
           uv run eplus-stubs-build --eplus-version "$MAJ_MIN" --patch "$PATCH"
           ls -R generated_package | head -120 || true
@@ -55,7 +57,7 @@ jobs:
       - name: Build wheels
         run: |
           for PKG in eppy-stubs archetypal-stubs; do \
-            DIR=generated_package/${PKG}-${{ matrix.eplus-version }}.0; \
+            DIR=generated_package/${PKG}-${{ matrix.eplus }}.0; \
             echo "Building $PKG from $DIR"; \
             uv build --directory "$DIR"; \
           done
@@ -68,7 +70,7 @@ jobs:
       - name: Validate eppy-stubs (mypy strict import smoke)
         run: |
           # Pick one of the built wheels to install and test.
-          WHEEL=$(ls generated_package/eppy-stubs-${{ matrix.eplus-version }}.0/dist/eppy_stubs-*.whl | head -1)
+          WHEEL=$(ls generated_package/eppy-stubs-${{ matrix.eplus }}.0/dist/eppy_stubs-*.whl | head -1)
           uv pip install "$WHEEL"
           # Dynamic test module to ensure import exists & types reveal.
           printf '%s\n' 'from eppy import modeleditor' 'reveal_type(modeleditor)' > sample_validate.py
@@ -77,8 +79,8 @@ jobs:
       - name: Upload artifact (both wheels)
         uses: actions/upload-artifact@v4
         with:
-          name: stubs-${{ matrix.eplus-version }}
+          name: stubs-${{ matrix.eplus }}
           path: |
-            generated_package/eppy-stubs-${{ matrix.eplus-version }}.0/dist/*.whl
-            generated_package/archetypal-stubs-${{ matrix.eplus-version }}.0/dist/*.whl
+            generated_package/eppy-stubs-${{ matrix.eplus }}.0/dist/*.whl
+            generated_package/archetypal-stubs-${{ matrix.eplus }}.0/dist/*.whl
           if-no-files-found: error
